--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -651,6 +651,7 @@ quelles dans Sense, et en retirant \ipath{GET /\_search?q=} dans Kibana.
 
 
 \subsubsection{Full-Body Search et QueryDSL}
+{\huge TODO!}
 
 \section{Le mapping et l'analyse}
 \subsection{Mapping}
