--- a/rapport/glossaire.tex
+++ b/rapport/glossaire.tex
@@ -29,7 +29,7 @@
                              description={Apache Lucene 
 }}
 \newglossaryentry{logs}{name={logs},
-                             description={Un log c'est une buche !
+                             description={Trace (informations) provenant d'un programme ou d'un équipement, souvent sous forme de texte
 }}
 
 \newglossaryentry{mapping}{name={mapping},
