--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -262,6 +262,7 @@ Debian Jessie, nouvellement stable au moment de l'installation.
 \input{kibana.tex}
 
 \part{Synthèse et conclusion}
+\input{synthese.tex}
 
 \chapter{Conclusion}
 
